##	Makefile.am
# 
# Copyright (C) 2009  The University of Texas at Austin.
# 
# This file is part of Hydra: A wireless multihop testbed.
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
# 

include $(top_srcdir)/Makefile.common

EXTRA_DIST = \
	gnuradio-core.src.lib.runtime.gr_basic_block.fix.h \
	gnuradio-core.src.lib.runtime.gr_basic_block.3.2.2.h \
	gnuradio-core.src.lib.runtime.gr_basic_block.fix.i \
	gnuradio-core.src.lib.runtime.gr_basic_block.3.2.2.i \
	gnuradio-core.src.lib.runtime.gr_flat_flowgraph.fix.cc \
	gnuradio-core.src.lib.runtime.gr_flat_flowgraph.3.2.2.cc \
	gr-usrp.src.usrp_source_base.fix.cc \
	gr-usrp.src.usrp_source_base.3.2.2.cc \
	gr-usrp.src.usrp_source_base.fix.h \
	gr-usrp.src.usrp_source_base.3.2.2.h

CLEANFILES = *.pyc
